# lambda-axum-wab-adapter

./: .gitignore  README.md  samconfig.toml  template.yml
lambda-axum-server/: .env.sample  Cargo.toml
lambda-axum-server/src/: config.rs  main.rs
lambda-axum-server/src/http/: books.rs  mod.rs
