[package]
name = "lambda-axum-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
aws-config = { version = "1.1.2", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.10.0"
axum = "0.7.4"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.17", features = ["derive", "env"] }
dotenv = "0.15.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_dynamo = { version = "4.2.13", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tower = { version = "0.4.13", features = ["timeout"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
